...

    )

    Column(modifier = Modifier.padding(start = 16.dp, bottom = 8.dp)) {

        Text(
            text = "Favorites",
            fontSize = 20.sp,
            fontWeight = FontWeight.Bold,
            modifier = Modifier.padding(bottom = 8.dp)
        )

        Row(modifier = Modifier
...
